# ESP32_LoraMesh

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  a.out  data_table.c  functions.h  index.html  lora-uart-test.c  main.c  structs.h  style.css  web_server.c
main/include/: data_table.h  hash_table.h  lora_uart.h  maintenance.h  mesh_config.h  node_globals.h  node_table.h  routing.h  web_server.h
main/src/: data_table.c  encryption_api.c  hash_table.c  lora_uart.c  maintenance.c  node_globals.c  node_table.c  routing.c  web_server.c
main/templates/: index.html  script.js  style.css
